--- a/tcp_server/Dockerfile
+++ b/tcp_server/Dockerfile
@@ -2,14 +2,17 @@ FROM golang:1.18.0-alpine3.14 as builder
 
 WORKDIR /usr/local/go/src/
 
-ADD app/ /usr/local/go/src/
+COPY . .
+RUN go mod download
 
 RUN go clean --modcache
-RUN go build -mod=readonly -o app cmd/main/app.go
+RUN go build -mod=readonly -o app ./app/cmd/main/
 
 FROM alpine:3.14
 
 COPY --from=builder /usr/local/go/src/app /
-COPY --from=builder /sur/local/go/src/config.json /
+COPY --from=builder /usr/local/go/src/app/cmd/main/defaultConfig.yaml /
 
-CMD ["/app"]
+EXPOSE 20163
+
+CMD ["./app"]
